# Sprawdzian_Informatyka

./: CMakeLists.txt  README.md
amicable_numbers/: main.cpp
euclidean_algorithm/: main.cpp
pascal_triangle/: main.cpp
power/: main.cpp
re_TAR_d/: generator.cpp  main.cpp
triangle/: main.cpp
twin_primes/: main.cpp
